--- a/package.json
+++ b/package.json
@@ -11,6 +11,27 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test-no-watch": "cross-env CI=true npm test",
+    "lint": "'src/**/*.js' 'src/components/**/*.js' '*.js' --write --single-quote --no-semi && standard -fix",
+    "precommit": "lint-staged && npm run test-no-watch"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write --single-quote --no-semi",
+      "standard --fix",
+      "git add"
+    ]
+  },
+  "standard": {
+    "globals": [],
+    "parser": "babel-eslint"
+  },
+  "devDependencies": {
+    "cross-env": "^5.1.3",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
+    "prettier": "^1.11.1",
+    "standard": "^11.0.0"
   }
 }
