--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1",
+    "prop-types": "^15.6.1",
     "standard": "^11.0.0"
   }
 }
