--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     ]
   },
   "standard": {
-    "globals": [],
+    "globals": ["alert"],
     "parser": "babel-eslint"
   },
   "devDependencies": {
