--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^1.0.0-beta.36",
+    "material-ui": "^1.0.0-beta.37",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
@@ -25,11 +25,13 @@
     ]
   },
   "standard": {
-    "globals": ["alert"],
+    "globals": [
+      "alert"
+    ],
     "parser": "babel-eslint"
   },
   "devDependencies": {
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.1.4",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1",
