--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
   },
   "devDependencies": {
     "cross-env": "^5.1.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.11.1",
     "prop-types": "^15.6.1",
+    "react-test-renderer": "^16.2.0",
     "standard": "^11.0.0"
   }
 }
