--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "standard": {
     "globals": [
-      "alert"
+      "alert",
+      "describe",
+      "test",
+      "expect"
     ],
     "parser": "babel-eslint"
   },
@@ -36,6 +39,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
+    "nightmare": "^3.0.0",
     "prettier": "^1.11.1",
     "prop-types": "^15.6.1",
     "react-test-renderer": "^16.2.0",
